Fixed the z-index of the price range tooltips

--- a/src/components/SearchPosts/SearchPosts.scss
+++ b/src/components/SearchPosts/SearchPosts.scss
@@ -26,3 +26,7 @@
     }
   }
 }
+
+.ant-slider-tooltip {
+  z-index: 0;
+}
